OSD: Replace shard_lock with sdata_wait_lock.

This avoid a race between contextqueue and op_wq.

Fixes: https://tracker.ceph.com/issues/36473
Signed-off-by: Jianpeng Ma <jianpeng.ma@intel.com>